Fixed hero content are overflow

--- a/Lab12 Creating ZaloStation/solution/assets/css/style.css
+++ b/Lab12 Creating ZaloStation/solution/assets/css/style.css
@@ -64,6 +64,7 @@
     width: 100%;
     padding-top: 100px;
     padding-bottom: 100px;
+    overflow: hidden;
 }
 
 #hero-content .textBox {
